--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.hillelmed</groupId>
   <artifactId>ogm-starter</artifactId>
-  <version>2.0.0-hillel-test</version>
+  <version>2.0.0-hillel-popo</version>
   <packaging>jar</packaging>
   <properties>
     <java.version>17</java.version>
